--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/cars_dealer_db?createDatabaseIfNotExist=true&amp&useSSl=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Java.Dev.2020
+spring.datasource.password=password
 
 #JPA Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
